# common

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
common/: config.py  plotting.py  scaling_laws.ipynb  supervised_training_loop.py  transformer.py  vae.py
common.egg-info/: PKG-INFO  SOURCES.txt
common/archs/: graph_nns.py  vae.py
common/core/: activation.py  backprop.py  batch_norm.py  hyper_opt_template.py  layer_norm.py  layers.py  losses.py  lr_scheduling_template.py  lr_warmup.py
common/examples/: cnn_mnist_scaling.py  vectorized_env.py
common/parallel/: data_parallel.py  dist_backprop.py  dist_data_parallel.py  llm_parallel.py  mlp_tensor_parallel.py  model_parallel.py
common/performance/: batching.py  jit.py  matmul.py  matvec.py  multi_proc.py  profiling.py  tscript.py
common/rl/: ddpg.py  ddpg_ref.py  ppo.ipynb  ppo_detailed.ipynb  reinforce_detailed.ipynb  td3.py  trpo.ipynb
common/rl/.ipynb_checkpoints/: impala_detailed-checkpoint.ipynb  ppo-checkpoint.ipynb  trpo-checkpoint.ipynb
common/rl/core/: actor_critic.py  actor_critic_detailed.ipynb  advantage_detailed.ipynb  q_learning.ipynb  q_learning.py  reinforce.py  reinforce_detailed.ipynb  sarsa.ipynb  sarsa.py  template.py  tricks.ipynb
common/safety/: rlhf.py
common/transformer/: decoder_only.py  one_layer_attn.py  run.py  tmp.torch  train.py  transformer.py  transformer_detailed.ipynb  transformer_other_ref.py  transformer_ref.py  vocabularize_template.py
scripts/: transformer_run.py
test/: activation_test.py  layer_test.py  losses_test.py
